// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table testing: is Error shown 1`] = `
<div>
  <div>
    <Cell
      cellStyle="cellTitle"
      content="№"
    />
    <TableTitle
      el={
        Array [
          "email",
          "Email",
        ]
      }
      key="email"
    />
    <TableTitle
      el={
        Array [
          "firstName",
          "First Name",
        ]
      }
      key="firstName"
    />
    <TableTitle
      el={
        Array [
          "lastName",
          "Last Name",
        ]
      }
      key="lastName"
    />
    <TableTitle
      el={
        Array [
          "position",
          "Position",
        ]
      }
      key="position"
    />
    <TableTitle
      el={
        Array [
          "project",
          "Project Name",
        ]
      }
      key="project"
    />
    <TableTitle
      el={
        Array [
          "longitude",
          "Longitude",
        ]
      }
      key="longitude"
    />
    <TableTitle
      el={
        Array [
          "latitude",
          "Latitude",
        ]
      }
      key="latitude"
    />
    <div>
      <Cell
        cellStyle="cellTitleActions"
        content="Actions"
      />
    </div>
  </div>
</div>
`;

exports[`Table testing: is Loader shown 1`] = `
<div>
  <div>
    <Cell
      cellStyle="cellTitle"
      content="№"
    />
    <TableTitle
      el={
        Array [
          "email",
          "Email",
        ]
      }
      key="email"
    />
    <TableTitle
      el={
        Array [
          "firstName",
          "First Name",
        ]
      }
      key="firstName"
    />
    <TableTitle
      el={
        Array [
          "lastName",
          "Last Name",
        ]
      }
      key="lastName"
    />
    <TableTitle
      el={
        Array [
          "position",
          "Position",
        ]
      }
      key="position"
    />
    <TableTitle
      el={
        Array [
          "project",
          "Project Name",
        ]
      }
      key="project"
    />
    <TableTitle
      el={
        Array [
          "longitude",
          "Longitude",
        ]
      }
      key="longitude"
    />
    <TableTitle
      el={
        Array [
          "latitude",
          "Latitude",
        ]
      }
      key="latitude"
    />
    <div>
      <Cell
        cellStyle="cellTitleActions"
        content="Actions"
      />
    </div>
  </div>
  <Loader
    loader={true}
  />
</div>
`;

exports[`Table testing: is Table rendered 1`] = `
<div>
  <div>
    <Cell
      cellStyle="cellTitle"
      content="№"
    />
    <TableTitle
      el={
        Array [
          "email",
          "Email",
        ]
      }
      key="email"
    />
    <TableTitle
      el={
        Array [
          "firstName",
          "First Name",
        ]
      }
      key="firstName"
    />
    <TableTitle
      el={
        Array [
          "lastName",
          "Last Name",
        ]
      }
      key="lastName"
    />
    <TableTitle
      el={
        Array [
          "position",
          "Position",
        ]
      }
      key="position"
    />
    <TableTitle
      el={
        Array [
          "project",
          "Project Name",
        ]
      }
      key="project"
    />
    <TableTitle
      el={
        Array [
          "longitude",
          "Longitude",
        ]
      }
      key="longitude"
    />
    <TableTitle
      el={
        Array [
          "latitude",
          "Latitude",
        ]
      }
      key="latitude"
    />
    <div>
      <Cell
        cellStyle="cellTitleActions"
        content="Actions"
      />
    </div>
  </div>
  <Row
    data={
      Array [
        Array [
          "a",
          "b",
        ],
        Array [
          "c",
          "d",
        ],
        Array [
          "e",
          "f",
        ],
        Array [
          "g",
          "h",
        ],
      ]
    }
    key="0"
    number={1}
  />
</div>
`;
